[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "WEALTH_PA_EE_MODELS"
version = "0.1.0"
description = "WEALTH physical activity and energy expenditure models and utilities"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy",
    "pandas",
    "scikit-learn",
    "joblib",
    "pygt3x"
]
authors = [
    { name = "Luis Sigcha", email = "luisfrancs@gmail.com" }
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Medical Science Apps"
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
wealth_pa_ee_models = [
    "models/**/*",
    "sample_data/**/*",
    "**/*.csv",
    "**/*.json",
    "**/*.yaml",
    "**/*.yml",
    "**/*.txt",
    "**/*.pkl",
    "**/*.joblib",
    "**/*.h5",
    "**/*.pt"
]
